--- a/.github/workflows/VERSION.yml
+++ b/.github/workflows/VERSION.yml
@@ -22,4 +22,4 @@ jobs:
           tag_prefix: "v"
           major_pattern: "BREAKING CHANGE:"
           minor_pattern: "feat:"
-          format: "v${major}.${minor}.${patch}-prerelease${increment}"
+          version_format: "v${major}.${minor}.${patch}-prerelease${increment}"
